--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -20,15 +20,14 @@
         android:theme="@style/Theme.GraduationProject"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activities.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity"/>
+        <activity android:name=".ui.activities.HomeActivity"/>
     </application>
 
 </manifest>
