--- a/WebServer/package.json
+++ b/WebServer/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devStart": "nodemon app.js"
+    "devStart": "nodemon app.js --ignore verify"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,6 @@
     "mongoose": "^8.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.3"
   }
 }
